--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint-staged": "lint-staged",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.6.5",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
@@ -21,7 +22,9 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.0",
+    "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   },
   "dependencies": {
