feat: ensure email validator adapter validates email

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.5",
+    "@types/validator": "github:types/validator",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^22.0.0",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3"
+    "@commitlint/config-conventional": "^17.0.3",
+    "validator": "^13.7.0"
   }
 }
